styles.css
*{
    box-sizing: border-box;
}
body{
    margin: auto;
    width: 714px;
}
hr{
    border: none;
    border-bottom: 1px black solid;
    margin: 0;
}
p,input,button,select,fieldset,hr{
    margin-bottom: 10px;
}
ul{
    margin:5px;
    padding-left: 5px;
    list-style-type:'- ';
}
fieldset{
    padding: 5px;
}
input[type="range"] {
    width:90px;
    float: right;
    margin-left: 5px;
}
.content{
    width: 514px;
    float: left;
}
.sidebar{
    width: 180px;
    margin: 10px;
    margin-top: 0;
    float: right;
}
.clear{
    clear: both;
}
.legend{
    position: relative;
    float: right;
    top: -1.5em;
    padding-left:2px;
    padding-right:2px;
    background: #fff;
}
#instructions ul li{
    font-size: 14px;
    margin-bottom: 8px;
}
#instructions ul li:last-child{
    margin-bottom: 0;
}
#lengthOutput{
    margin-left: 10px;
}

